# distributed_counter

./: .gitignore  Cargo.toml  docker-compose-scylla-cluster.yaml  docker-compose.yaml
src/: app.rs  main.rs
src/application/: mod.rs
src/application/service/: counter_viewer_service.rs  mod.rs  viewer_service.rs
src/application/usecase/: counter_viewer_usecase.rs  mod.rs  viewer_usecase.rs
src/config/: env_config.rs  log_config.rs  mod.rs
src/domain/schema/: counter.rs  mod.rs  viewer.rs
src/dto/request/: count_viewer.rs  kafka_payload.rs  mod.rs  viewer_create.rs
src/dto/response/: api_response.rs  count_response.rs  counter_viewer_response.rs  mod.rs  viewer_response.rs
src/infrastructure/: init.rs  mod.rs
src/infrastructure/kafka/: consumer.rs  producer.rs
src/infrastructure/scylladb/: mod.rs  session.rs
src/infrastructure/scylladb/repository/: counter_viewer_repository.rs  mod.rs  viewer_repository.rs
src/interface/http/handler/: kafka_handler.rs
