[package]
name = "count_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.15.11"
dotenv = "0.15.0"
futures = "0.3.31"
rand = "0.9.1"
rdkafka = "0.37.0"
scylla = { version = "1.1.0", features = ["chrono-04"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = "1.17.0"
